<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/dfki_pic" />

        <EditText
            android:id="@+id/usernameEdTx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/word_email"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/passEdTx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/word_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginBttn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/my_button"
            android:text="@string/word_login" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>