<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/dfki_pic" />

        <EditText
            android:id="@+id/usernameEdTx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/word_email"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/passEdTx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/word_password"
            android:inputType="textPassword" />

        <LinearLayout
            android:id="@+id/registr_logged_in_layout_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/loginChBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/word_stayLogged"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/registrationTextViewId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:text="Registration"
                android:textAllCaps="true"
                android:textColor="#5E35B1"
                android:textSize="18sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <Button
            android:id="@+id/loginBttn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/my_button"
            android:text="@string/word_login" />

        <TextView
            android:id="@+id/backToLoginTextViewID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/word_login"
            android:textAlignment="textEnd"
            android:textAllCaps="true"
            android:textColor="#5E35B1"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/progressBarLoginID"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>