<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/word_feedback"
                android:textAlignment="center"
                android:textColor="#1C1A1A"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Stuck for:"
                    android:textColor="#1C1A1A"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/stuckEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Duration:"
                    android:inputType="number"
                    android:maxLength="9"
                    android:text="5"
                    android:textColor="#5473D5" />

                <Spinner
                    android:id="@+id/measurementSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:spinnerMode="dropdown"
                    android:textAlignment="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/inTextViewFeedbackFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/in_or_on"
                    android:textColor="#1C1A1A"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/vehicleSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:spinnerMode="dropdown"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/vehicleNumberEdTxFeedbackFrgmt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="textPersonName"
                    android:text="5"
                    android:textColor="#5473D5"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/locationEdTxId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/word_address"
                    android:inputType="textPersonName"
                    android:text="Universität des Saarlandes, Campus, Gebäude D3 3, 66123 Saarbrücken, Germany"
                    android:textColor="#5473D5" />

                <ImageButton
                    android:id="@+id/currentLocationBtnId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    app:srcCompat="@drawable/placeholder" />

            </LinearLayout>

            <TextView
                android:id="@+id/radiusTextViewFeedbackFragID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:textColor="#1C1A1A"
                android:textSize="20sp" />

            <SeekBar
                android:id="@+id/radiusSeekBarFeedbackFragID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:progress="50" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="REASONS"
                android:textAlignment="center"
                android:textColor="#1C1A1A"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/rainCheckBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Rain"
                        android:textColor="#1C1A1A"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <CheckBox
                        android:id="@+id/trafficJamCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Traffic Jam"
                        android:textColor="#1C1A1A"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <CheckBox
                        android:id="@+id/brokenTrfLightCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/reason_broken_jam_title"
                        android:textColor="#1C1A1A"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/crashCheckBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Crash"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <CheckBox
                        android:id="@+id/maintenanceCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Maintenance"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <CheckBox
                        android:id="@+id/otherCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Other"
                        android:textColor="#1C1A1A"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>


            <EditText
                android:id="@+id/otherEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/add_info"
                android:inputType="textPersonName"
                android:textColor="#5473D5"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/submitButtonTrJmFrg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Submit" />

                <Button
                    android:id="@+id/cleanButtonTrJmFrg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="Clean" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>